Removed remaining references to Pie Noon.
Grepped for pie noon and replaced them with references to Zooshi where
appropriate.

Also updated Android.mk so that the android build would succeed.

Change-Id: Icf395a3dfe1e22d620f57ba2b3c4429efddd2997

--- a/assets/about.html
+++ b/assets/about.html
@@ -3,4 +3,4 @@ while riding a boat.</p>
 
 <p> <a href="http://www.google.com/intl/en/policies/terms/">Terms</a> </p>
 <p> <a href="http://www.google.com/policies/privacy/">Privacy</a> </p>
-<p> <a href="http://google.github.io/pienoon/">Open Source Repository</a> </p>
+<p> <a href="http://google.github.io/zooshi/">Open Source Repository</a> </p>
