Update docs to 58d3eb7
58d3eb7 Adding docs for Modifying Assets.

--- a/usergroup0.html
+++ b/usergroup0.html
@@ -51,7 +51,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
     <ul class="tablist">
       <li><a href="index.html"><span>Main&#160;Page</span></a></li>
       <li><a href="zooshi_guide_gameplay.html"><span>Gameplay</span></a></li>
-      <li><a href="zooshi_guide_overview.html"><span>Programmer's&#160;Guide</span></a></li>
+      <li class="current"><a href="zooshi_guide_overview.html"><span>Programmer's&#160;Guide</span></a></li>
       <li><a href="zooshi_readme.html"><span>Readme</span></a></li>
       <li><a href="contributing.html"><span>Contributing</span></a></li>
       <li>
@@ -72,6 +72,21 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
       </li>
     </ul>
   </div>
+  <div id="navrow2" class="tabs2">
+    <ul class="tablist">
+      <li><a href="zooshi_guide_building.html"><span>Building</span></a></li>
+      <li><a href="zooshi_guide_assets.html"><span>Modifying&#160;Assets</span></a></li>
+      <li><a href="zooshi_guide_play_games_services.html"><span>Set&#160;Up&#160;Google&#160;Play&#160;Games&#160;Services</span></a></li>
+      <li class="current"><a href="usergroup0.html"><span>Components</span></a></li>
+    </ul>
+  </div>
+  <div id="navrow2" class="tabs2">
+    <ul class="tablist">
+      <li><a href="zooshi_guide_gamestates.html"><span>Game&#160;States</span></a></li>
+      <li><a href="zooshi_guide_controllers.html"><span>Controllers</span></a></li>
+      <li><a href="zooshi_guide_cardboard.html"><span>Cardboard</span></a></li>
+    </ul>
+  </div>
 </div><!-- top -->
 <div id="side-nav" class="ui-resizable side-nav-resizable">
   <div id="nav-tree">
@@ -84,7 +99,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
   </div>
 </div>
 <script type="text/javascript">
-$(document).ready(function(){initNavTree('zooshi_guide_components.html','');});
+$(document).ready(function(){initNavTree('usergroup0.html','');});
 </script>
 <div id="doc-content">
 <!-- window showing the filter options -->
@@ -103,11 +118,15 @@ $(document).ready(function(){initNavTree('zooshi_guide_components.html','');});
 
 <div class="header">
   <div class="headertitle">
-<div class="title">Components </div>  </div>
+<div class="title">Components</div>  </div>
 </div><!--header-->
 <div class="contents">
-<div class="textblock"><p>TODO </p>
-</div></div><!-- contents -->
+<ul>
+<li><a href="zooshi_guide_gamestates.html"><span>Game&#160;States</span></a></li>
+<li><a href="zooshi_guide_controllers.html"><span>Controllers</span></a></li>
+<li><a href="zooshi_guide_cardboard.html"><span>Cardboard</span></a></li>
+</ul>
+</div><!-- contents -->
 </div><!-- doc-content -->
 <!-- Google Analytics -->
 <script>
