Update docs to c7308e5
c7308e5 Fixing the links to reference google.github.io.

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ Zooshi    </h1>
 
 </div>
 
- <a href="http://github.com/google/pindrop">Pindrop</a>, a simple audio engine designed with games in mind. It handles all the audio of the game.   </td></tr>
+ <a href="http://google.github.io/pindrop/">Pindrop</a>, a simple audio engine designed with games in mind. It handles all the audio of the game.   </td></tr>
 
 <tr>
 
