--- a/zooshi_guide_building_windows.html
+++ b/zooshi_guide_building_windows.html
@@ -113,6 +113,7 @@ $(document).ready(function(){initNavTree('zooshi_guide_building_windows.html',''
 <li><a href="http://www.cmake.org">cmake</a>: 2.8.12</li>
 <li><a href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a>: 0.4.0 (downloaded from the <a href="https://developers.google.com/speed/webp/docs/precompiled">WebP Precompiled Utilities</a> page)</li>
 <li><a href="http://www.microsoft.com/en-us/download/details.aspx?id=6812">DirectX SDK</a>: 9.29.1962</li>
+<li><a href="http://www.imagemagick.org">ImageMagick</a>: 6.9.2-6</li>
 <li><a href="http://www.python.org/download/releases/2.7/">Python</a>: 2.7.6</li>
 <li><a href="http://www.visualstudio.com/">Visual Studio</a>: 2010 or 2012</li>
 <li><a href="http://windows.microsoft.com/">Windows</a>: 7</li>
