--- a/zooshi_guide_building_linux.html
+++ b/zooshi_guide_building_linux.html
@@ -114,6 +114,7 @@ $(document).ready(function(){initNavTree('zooshi_guide_building_linux.html','');
 <li><a href="http://www.cmake.org/">cmake</a>: 2.8.12</li>
 <li><a href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a>: 0.4.0 (available from the <a href="https://developers.google.com/speed/webp/docs/precompiled">WebP Precompiled Utilities</a> page)</li>
 <li><a href="http://www.mesa3d.org/">GLU</a>: libglu1-mesa-dev 8.0.4</li>
+<li><a href="http://imagemagick.org">ImageMagick</a>: 6.7.7-10</li>
 <li><a href="http://www.gnu.org/software/libtool/">libtool</a>: 2.4.2</li>
 <li><a href="http://www.mesa3d.org/">OpenGL</a>: libglapi-mesa 8.0.4</li>
 <li><a href="http://sourceforge.net/projects/osspd/">OSS Proxy Daemon</a>: osspd 1.3.2</li>
@@ -128,13 +129,14 @@ Before Building</h1>
 <li><a href="http://www.cmake.org/">cmake</a> (You can also manually install from <a href="http://www.cmake.org/">cmake.org</a>.)</li>
 <li><a href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a></li>
 <li><a href="http://www.mesa3d.org/">GLU</a> (<code>libglu1-mesa-dev</code>)</li>
+<li><a href="http://imagemagick.org">ImageMagick</a></li>
 <li><a href="http://www.mesa3d.org/">OpenGL</a> (<code>libglapi-mesa</code>)</li>
 <li><a href="http://sourceforge.net/projects/osspd/">OSS Proxy Daemon</a> (<code>osspd</code>)</li>
 <li><a href="http://www.python.org/download/releases/2.7/">Python</a></li>
 <li><a href="http://www.colm.net/open-source/ragel/">Ragel</a></li>
 </ul>
 <p>For example, on Ubuntu: </p>
-<pre class="fragment">sudo apt-get install autoconf automake cmake libglapi-mesa libglu1-mesa-dev libtool osspd python ragel webp
+<pre class="fragment">sudo apt-get install autoconf automake cmake imagemagick libglapi-mesa libglu1-mesa-dev libtool osspd python ragel webp
 </pre><h1>Building</h1>
 <ul>
 <li>Generate makefiles from the <a href="http://www.cmake.org/">cmake</a> project in the <code>zooshi</code> directory.</li>
