Update docs to 4ff2fb6b3c
4ff2fb6b3c Update Android build instructions.

--- a/zooshi_guide_building_linux.html
+++ b/zooshi_guide_building_linux.html
@@ -210,7 +210,7 @@ Before Building</h1>
 <ul>
 <li><a href="http://www.gnu.org/software/autoconf/">autoconf</a>, <a href="http://www.gnu.org/software/automake/">automake</a>, and <a href="http://www.gnu.org/software/libtool/">libtool</a></li>
 <li><a href="http://www.cmake.org/">cmake</a> (You can also manually install from <a href="http://www.cmake.org/">cmake.org</a>.)</li>
-<li><a href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a></li>
+<li><a href="https://developers.google.com/speed/webp/docs/cwebp">cwebp</a> (<code>webp</code>)</li>
 <li><a href="http://www.mesa3d.org/">GLU</a> (<code>libglu1-mesa-dev</code>)</li>
 <li><a href="http://imagemagick.org">ImageMagick</a></li>
 <li><a href="http://www.mesa3d.org/">OpenGL</a> (<code>libglapi-mesa</code>)</li>
@@ -253,7 +253,7 @@ make
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-46159502-1', 'google.github.io');
+ga('create', 'UA-49880327-7', 'google.github.io');
 ga('send', 'pageview');
 </script>
 </body>
