--- a/index.html
+++ b/index.html
@@ -576,11 +576,11 @@ Zooshi    </h1>
 
 <ul>
 
-<li>Discuss Zooshi with other developers and users on the <a href="http://group.google.com/group/zooshi">Zooshi Google Group</a>.</li>
+<li>Discuss Zooshi with other developers and users on the <a href="http://groups.google.com/group/zooshi">Zooshi Google Group</a>.</li>
 
 <li>File issues on the <a href="http://github.com/google/zooshi/issues">Zooshi Issues Tracker</a>.</li>
 
-<li>Post your questions to <a href="http://www.stackoverflow.com">stackoverflow.com</a> with a mention of <b>zooshi</b>.</li>
+<li>Post your questions to <a href="http://stackoverflow.com/search?q=zooshi">stackoverflow.com</a> with a mention of <b>zooshi</b>.</li>
 
 </ul>
 
@@ -604,7 +604,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-46159502-1', 'google.github.io');
+ga('create', 'UA-49880327-7', 'google.github.io');
 
 ga('send', 'pageview');
 
