Update docs to 0da6e9c1c9
0da6e9c1c9 Adding page documenting Firebase features.

--- a/usergroup0.html
+++ b/usergroup0.html
@@ -168,6 +168,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
       <li><a href="zooshi_guide_gamestates.html"><span>Game&#160;States</span></a></li>
       <li><a href="zooshi_guide_controllers.html"><span>Controllers</span></a></li>
       <li><a href="zooshi_guide_cardboard.html"><span>Cardboard</span></a></li>
+      <li><a href="@ref zooshi_guide_firebase"><span>Firebase</span></a></li>
     </ul>
   </div>
 </div><!-- top -->
@@ -208,6 +209,7 @@ $(document).ready(function(){initNavTree('usergroup0.html','');});
 <li><a href="zooshi_guide_gamestates.html"><span>Game&#160;States</span></a></li>
 <li><a href="zooshi_guide_controllers.html"><span>Controllers</span></a></li>
 <li><a href="zooshi_guide_cardboard.html"><span>Cardboard</span></a></li>
+<li><a href="@ref zooshi_guide_firebase"><span>Firebase</span></a></li>
 </ul>
 </div><!-- contents -->
 </div><!-- doc-content -->
